@@ -188,13 +188,14 @@ final class WC_Stripe_Blocks_Support extends AbstractPaymentMethodType {
 			$js_params,
 			// Blocks-specific options
 			[
-				'icons'                          => $this->get_icons(),
-				'supports'                       => $this->get_supported_features(),
-				'showSavedCards'                 => $this->get_show_saved_cards(),
-				'showSaveOption'                 => $this->get_show_save_option(),
-				'isAdmin'                        => is_admin(),
-				'shouldShowPaymentRequestButton' => $this->should_show_payment_request_button(),
-				'button'                         => [
+				'icons'                           => $this->get_icons(),
+				'supports'                        => $this->get_supported_features(),
+				'showSavedCards'                  => $this->get_show_saved_cards(),
+				'showSaveOption'                  => $this->get_show_save_option(),
+				'isAdmin'                         => is_admin(),
+				'shouldShowPaymentRequestButton'  => $this->should_show_payment_request_button(),
+				'shouldShowExpressCheckoutButton' => $this->should_show_express_checkout_button(),
+				'button'                          => [
 					'customLabel' => $this->payment_request_configuration->get_button_label(),
 				],
 			]
@@ -255,10 +256,15 @@ final class WC_Stripe_Blocks_Support extends AbstractPaymentMethodType {
 	 * @return boolean True if ECEs should be displayed, false otherwise.
 	 */
 	private function should_show_express_checkout_button() {
+		// Don't show if ECEs are turned off in settings.
+		if ( ! $this->express_checkout_configuration->express_checkout_helper->is_express_checkout_enabled() ) {
+			return false;
+		}
+
 		// Don't show if ECEs are supposed to be hidden on the cart page.
 		if (
 			has_block( 'woocommerce/cart' )
-			&& ! $this->express_checkout_configuration->express_checkout_helper->should_show_ece_on_cart_page()()
+			&& ! $this->express_checkout_configuration->express_checkout_helper->should_show_ece_on_cart_page()
 		) {
 			return false;
 		}
